Code refactoring according to the results of running FindBugs.